@@ -1,0 +1,9 @@
+<header>Virtualmin URL for use in email messages</header>
+
+When Virtualmin sends email messages to the system administrator, it will
+often include the URL for Virtualmin on the system that message was sent from.
+By default this is based on the system's hostname, but you can set a custom
+URL like <tt>https://yourdomain.com:10000</tt> using this field. <p>
+
+<footer>
+
